# VRController2dFighter

./: CMakeLists.txt  affine_transform.py  compare_features.py  keyboard_simulator.cpp  keyboard_simulator.hpp  main.cpp
templates/json/: 000000000151_keypoints.json  000000000171_keypoints.json  000000000187_keypoints.json  000000000224_keypoints.json  000000000225_keypoints.json  000000000226_keypoints.json  000000000423_keypoints.json  000000000474_keypoints.json  000000000478_keypoints.json  000000000653_keypoints.json  000000000654_keypoints.json  000000000655_keypoints.json
